--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+body {
+  margin: ;
+  padding: ;
+  font-family: -apple-system, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(
+    to left,
+    rgb(207, 148, 230) 0%,
+    rgb(121, 202, 235) 100%
+  );
+  text-align: center;
+}
+
 .App {
   text-align: center;
 }
