--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -1,8 +1,9 @@
 .search-box {
 
-    width: 10vw;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-color: blue;
-    border-radius: 5px;
+    -webkit-appearance: none;
+    border: 5px;
+    padding: 10px;
+    width: 150px;
+    line-height: 30ox;
+    margin-bottom: 30px;
 }
